Upgraded from Md Modules to Mat Modules

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,5 +1,5 @@
-<md-tab-group class="home-tab-group">
-  <md-tab label="Favourite Pets">
+<mat-tab-group class="home-tab-group">
+  <mat-tab label="Favourite Pets">
     <div class="pet-card-list">
       <!-- <h2 class="bar">Favourite Pets</h2> -->
       <petbros-pet
@@ -8,9 +8,9 @@
       </petbros-pet>
     </div>
     <!-- </div> -->
-  </md-tab>
+  </mat-tab>
   
-  <md-tab label="Favourite Shelters">
+  <mat-tab label="Favourite Shelters">
     <div class="shelter-card-list">
         <!-- <h2 class="bar">Favourite Shelters</h2> -->
         <petbros-shelter
@@ -18,6 +18,6 @@
         [shelter]="shelter">
       </petbros-shelter>
     </div>
-  </md-tab>
-</md-tab-group>
+  </mat-tab>
+</mat-tab-group>
   
