--- a/src/app/home/shelter/shelter.component.html
+++ b/src/app/home/shelter/shelter.component.html
@@ -1,9 +1,9 @@
-<md-card class="shelter-card" >
-  <md-card-title [routerLink]="['/shelter', shelter.id]" color="accent">{{shelter.name}}</md-card-title>
-  <md-card-actions>
-    <button md-button (click)="removeFromFavourites()">
-      <md-icon color="warn">favorite_border</md-icon>
+<mat-card class="shelter-card" >
+  <mat-card-title [routerLink]="['/shelter', shelter.id]" color="accent">{{shelter.name}}</mat-card-title>
+  <mat-card-actions>
+    <button mat-button (click)="removeFromFavourites()">
+      <mat-icon color="warn">favorite_border</mat-icon>
       <span>REMOVE FROM FAVOURITES</span>
     </button>
-  </md-card-actions>
-</md-card>
+  </mat-card-actions>
+</mat-card>
