--- a/src/app/pet/pet/pet.component.html
+++ b/src/app/pet/pet/pet.component.html
@@ -1,15 +1,15 @@
 
-<md-card class="pet-card" >
-  <md-card-title [routerLink]="['/pet', pet.id]" color="accent">{{pet.name}}</md-card-title>
-  <img [routerLink]="['/pet', pet.id]" md-card-image [src]="pet.media.getFirstImage(3, './assets/images/generic-pet.jpg')">
-  <md-card-actions>
-    <button *ngIf="!favourite"  md-button (click)="addToFavourites()">
-      <md-icon color="warn">favorite</md-icon>
+<mat-card class="pet-card" >
+  <mat-card-title [routerLink]="['/pet', pet.id]" color="accent">{{pet.name}}</mat-card-title>
+  <img [routerLink]="['/pet', pet.id]" mat-card-image [src]="pet.media.getFirstImage(3, './assets/images/generic-pet.jpg')">
+  <mat-card-actions>
+    <button *ngIf="!favourite"  mat-button (click)="addToFavourites()">
+      <mat-icon color="warn">favorite</mat-icon>
       <span>ADD TO FAVOURITES</span>
     </button>
-    <button *ngIf="favourite"  md-button (click)="removeFromFavourites()">
-      <md-icon color="warn">favorite_border</md-icon>
+    <button *ngIf="favourite"  mat-button (click)="removeFromFavourites()">
+      <mat-icon color="warn">favorite_border</mat-icon>
       <span>REMOVE FROM FAVOURITES</span>
     </button>
-  </md-card-actions>
-</md-card>
+  </mat-card-actions>
+</mat-card>
