--- a/src/app/shelter-details/shelter-details/shelter-details.component.html
+++ b/src/app/shelter-details/shelter-details/shelter-details.component.html
@@ -1,9 +1,9 @@
 <h1 class="title"
   [innerText]="'shelter-details.title' | translate"></h1>
 
-<md-card *ngIf="shelter" class="shelter-card" >
-  <md-card-title>{{shelter.name}}</md-card-title>
-  <md-card-content>
+<mat-card *ngIf="shelter" class="shelter-card" >
+  <mat-card-title>{{shelter.name}}</mat-card-title>
+  <mat-card-content>
     <h5>Phone: {{shelter.phone}}</h5>
     <h5>Email: {{shelter.email}}</h5>
 
@@ -13,18 +13,18 @@
     <h6>{{shelter.city}}, {{shelter.state}}</h6>
 
     <h4>Location: lat={{shelter.latitude}} lon={{shelter.longitude}}</h4>
-  </md-card-content>
-  <md-card-actions>
-    <button *ngIf="!favourite" md-button (click)="addToFavourites()">
-      <md-icon color="warn">favorite</md-icon>
+  </mat-card-content>
+  <mat-card-actions>
+    <button *ngIf="!favourite" mat-button (click)="addToFavourites()">
+      <mat-icon color="warn">favorite</mat-icon>
       <span>ADD TO FAVOURITES</span>
     </button>
-    <button *ngIf="favourite" md-button (click)="removeFromFavourites()">
-      <md-icon color="warn">favorite_border</md-icon>
+    <button *ngIf="favourite" mat-button (click)="removeFromFavourites()">
+      <mat-icon color="warn">favorite_border</mat-icon>
       <span>REMOVE FROM FAVOURITES</span>
     </button>
-  </md-card-actions>
-</md-card>
+  </mat-card-actions>
+</mat-card>
 
 <div class="shelter" *ngIf="shelter">
   <!-- <h2>{{shelter.name}}</h2>
