--- a/src/app/menu/components/menu-item/menu-item.component.html
+++ b/src/app/menu/components/menu-item/menu-item.component.html
@@ -1,5 +1,5 @@
 <button *ngIf="item"
-  md-button [color]="(rla.isActive) ? 'accent' : ''"
+  mat-button [color]="(rla.isActive) ? 'accent' : ''"
   #rla="routerLinkActive"
   [routerLink]="item.link"
   [routerLinkActive]="'active'">
