--- a/src/app/pet-details/pet-details/pet-details.component.html
+++ b/src/app/pet-details/pet-details/pet-details.component.html
@@ -1,5 +1,5 @@
-<md-card *ngIf="pet" class="pet-card" >
-  <md-card-title>{{pet.name}}</md-card-title>
+<mat-card *ngIf="pet" class="pet-card" >
+  <mat-card-title>{{pet.name}}</mat-card-title>
   
   <img [src]="pet.media.getFirstImage(4, './assets/images/generic-pet.jpg')" />
 
@@ -8,14 +8,14 @@
 
   <span>{{pet.description}}</span>
 
-  <md-card-actions>
-    <button *ngIf="!favourite" md-button (click)="addToFavourites()">
-      <md-icon color="warn">favorite</md-icon>
+  <mat-card-actions>
+    <button *ngIf="!favourite" mat-button (click)="addToFavourites()">
+      <mat-icon color="warn">favorite</mat-icon>
       <span>ADD TO FAVOURITES</span>
     </button>
-    <button *ngIf="favourite" md-button (click)="removeFromFavourites()">
-      <md-icon color="warn">favorite_border</md-icon>
+    <button *ngIf="favourite" mat-button (click)="removeFromFavourites()">
+      <mat-icon color="warn">favorite_border</mat-icon>
       <span>REMOVE FROM FAVOURITES</span>
     </button>
-  </md-card-actions>
-</md-card>
+  </mat-card-actions>
+</mat-card>
