--- a/src/app/pet-details/pet-details/pet-details.component.scss
+++ b/src/app/pet-details/pet-details/pet-details.component.scss
@@ -13,11 +13,11 @@
   span {
     padding-top: 10px;
   }
-  md-card-title {
+  mat-card-title {
     width: 700px;
   }
 
-  md-card-actions {
+  mat-card-actions {
     align-self: center;
   }
 }
