--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,11 +81,11 @@ body {
   }
 
 
-  md-card-title {
+  mat-card-title {
     width: 200px;
   }
 
-  md-card-actions {
+  mat-card-actions {
     align-self: center;
   }
 }
